@@ -265,7 +265,7 @@
 
     <!-- Strings for the ShowcaseView tutorial. -->
     <string name="tutorial_1_title">qavan! (I salute you!)</string>
-    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-11-16: new vocab from qepHom\'a\' 2014.\n2014-10-23: Text-To-Speech integration.</string>
+    <string name="tutorial_1_msg">This tutorial gives a brief overview of boQwI\'.\n\n* Latest changes *\n2014-11-30: rover bug fix.\n2014-11-16: new vocab from qepHom\'a\' 2014.\n2014-10-23: Text-To-Speech integration.</string>
     <string name="tutorial_2_title">Search</string>
     <string name="tutorial_2_msg">Use this to search the database. You can search using Klingon or English.</string>
     <string name="tutorial_3_title">Resources</string>
